# ChangeLog for dev-php5/pecl-imagick
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-imagick/Attic/ChangeLog,v 1.25 2009/12/16 20:22:56 hoffie Exp $

*pecl-imagick-2.3.0 (16 Dec 2009)

  16 Dec 2009; Christian Hoffmann <hoffie@gentoo.org>
  +pecl-imagick-2.3.0.ebuild:
  version bump per bug 288440, thanks to Daniel T. <dane.tschi@gmx.at>

*pecl-imagick-2.3.0_beta1 (09 Apr 2009)
*pecl-imagick-2.2.2 (09 Apr 2009)

  09 Apr 2009; Christian Hoffmann <hoffie@gentoo.org>
  +pecl-imagick-2.2.2.ebuild, +pecl-imagick-2.3.0_beta1.ebuild:
  version bump to 2.2.2 (stable) and 2.3.0_beta1, might fix bug 260578

  06 Jul 2008; Markus Meier <maekke@gentoo.org> pecl-imagick-2.1.1.ebuild:
  x86 stable, bug #230896

  06 Jul 2008; Christian Hoffmann <hoffie@gentoo.org>
  pecl-imagick-2.1.1.ebuild:
  stable on amd64, bug 230896

  07 May 2008; Christian Hoffmann <hoffie@gentoo.org>
  -pecl-imagick-2.1.0.ebuild, -pecl-imagick-2.1.1_rc1.ebuild:
  removing old (_rc1 would have needed fixing because of bug 220519 anyway)

*pecl-imagick-2.1.1 (17 Mar 2008)

  17 Mar 2008; <jokey@gentoo.org> +pecl-imagick-2.1.1.ebuild:
  Version bump from project overlay

  09 Mar 2008; Jakub Moc <jakub@gentoo.org>
  pecl-imagick-2.1.1.ebuild:
  Version bump

*pecl-imagick-2.1.1_rc1 (03 Mar 2008)

  03 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  +pecl-imagick-2.1.1_rc1.ebuild:
  Version bump from project overlay

  26 Feb 2008; Jakub Moc <jakub@gentoo.org>
  +pecl-imagick-2.1.1_rc1.ebuild:
  Version bump, fixed building against ImageMagick 6.3.8.x

*pecl-imagick-2.1.0 (11 Feb 2008)

  11 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  -pecl-imagick-2.1.0_rc2.ebuild, -pecl-imagick-2.1.0_rc3.ebuild,
  +pecl-imagick-2.1.0.ebuild:
  Version bump, from the php overlay

  16 Jan 2008; Hanno Boeck <hanno@gentoo.org> pecl-imagick-2.0.1.ebuild:
  Stable on amd64.

*pecl-imagick-2.1.0_rc3 (13 Jan 2008)
