@@ -1,31 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-imagick/Attic/pecl-imagick-2.3.0_beta1.ebuild,v 1.1 2009/04/09 10:36:30 hoffie Exp $
-
-PHP_EXT_NAME="imagick"
-PHP_EXT_INI="yes"
-PHP_EXT_ZENDEXT="no"
-DOCS="TODO"
-
-inherit php-ext-pecl-r1
-
-KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
-
-DESCRIPTION="PHP wrapper for the ImageMagick library."
-LICENSE="PHP-3.01"
-SLOT="0"
-IUSE="examples"
-
-DEPEND=">=media-gfx/imagemagick-6.2.4"
-RDEPEND="${DEPEND}"
-
-need_php_by_category
-
-MY_PV="${PV/_/}"
-MY_PV="${MY_PV/beta/b}"
-PECL_PKG_V="${PECL_PKG}-${MY_PV}"
-FILENAME="${PECL_PKG_V}.tgz"
-SRC_URI="http://pecl.php.net/get/${FILENAME}"
-S="${WORKDIR}/${PECL_PKG_V}"
-
-my_conf="--with-imagick=/usr"
